feat: creates workingtime when updating clock
